# focus

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  DockerfileWithBuild  README.md  build.rs  build.sh  deny.toml
.github/workflows/: dockerhub_readme.yml  rust.yml
dev/: docker-compose.yml  focusdev
dev/pki/: pki
libs/focus_api/: Cargo.toml
libs/focus_api/src/: lib.rs
resources/: bbmri_base64_encoded_queries_to_cache_results_of  default_provider_icon  library.json  measure.json  measure_report_dktk.json  template_bbmri.cql
resources/cql/: BBMRI_STRAT_AGE_STRATIFIER  BBMRI_STRAT_CUSTODIAN_STRATIFIER  BBMRI_STRAT_DEF_SPECIMEN  BBMRI_STRAT_DIAGNOSIS_STRATIFIER  BBMRI_STRAT_GENDER_STRATIFIER  BBMRI_STRAT_SAMPLE_TYPE_STRATIFIER  BBMRI_STRAT_STORAGE_TEMPERATURE_STRATIFIER  CCE_REPLACE_SPECIMEN_STRATIFIER  CCE_STRAT_DECEASED_STRATIFIER  CCE_STRAT_PROCEDURE_STRATIFIER  DHKI_STRAT_AGE_STRATIFIER  DHKI_STRAT_ENCOUNTER_STRATIFIER  DHKI_STRAT_MEDICATION_STRATIFIER  DHKI_STRAT_SPECIMEN_STRATIFIER  DKTK_REPLACE_HISTOLOGY_STRATIFIER  DKTK_REPLACE_SPECIMEN_STRATIFIER  DKTK_STRAT_AGE_CLASS_STRATIFIER  DKTK_STRAT_AGE_STRATIFIER  DKTK_STRAT_DECEASED_STRATIFIER  DKTK_STRAT_DEF_IN_INITIAL_POPULATION  DKTK_STRAT_DIAGNOSIS_STRATIFIER  DKTK_STRAT_GENDER_STRATIFIER  DKTK_STRAT_GENETIC_VARIANT  DKTK_STRAT_HISTOLOGY_STRATIFIER  DKTK_STRAT_MEDICATION_STRATIFIER  DKTK_STRAT_PRIMARY_DIAGNOSIS_NO_SORT_STRATIFIER  DKTK_STRAT_PRIMARY_DIAGNOSIS_STRATIFIER  DKTK_STRAT_PROCEDURE_STRATIFIER  DKTK_STRAT_SPECIMEN_STRATIFIER  EHDS2_HOSPITAL  EHDS2_LABORATORY  EHDS2_LOCATION  EHDS2_OBSERVATION  EHDS2_PATIENT  EHDS2_REFGUIDE  EHDS2_SPECIMEN  EHDS2_STRAT_AGE_CLASS_STRATIFIER  EHDS2_STRAT_ANTIBIOTIC_STRATIFIER  EHDS2_STRAT_DEF_OBSERVATION  EHDS2_STRAT_HOSPITAL_ID_CLASS_STRATIFIER  (+15 more)
resources/sql/: EXLIQUID_LATEST  EXLIQUID_PATIENT_COUNT  EXLIQUID_SAMPLE_3LEVELS  ORGANOID_DASHBOARD_INTERNAL  ORGANOID_DASHBOARD_PUBLIC  SELECT_TABLES  SELECT_TEST  SIORGP_PUBLIC_MAIN  SIORGP_PUBLIC_METPREDICT  SIORGP_PUBLIC_NEOMATCH  SIORGP_PUBLIC_NPAT  SIORGP_PUBLIC_NVISIT2B
resources/test/: criteria_groups_bbmri.json  measure_report_bbmri.json  measure_report_bbmri_new_extension.json  measure_report_dktk.json  measure_report_exliquid.json  query_bbmri.cql  query_bbmri_placeholders.cql  result_age_at_diagnosis_30_to_70.cql  result_age_at_diagnosis_lower_than_70.cql  result_all_gbn.cql  result_bbmri_sample_kind_blood_plasma.cql  result_bbmri_sample_kind_blood_serum.cql  result_bbmri_sample_kind_derivative_other.cql  result_bbmri_sample_kind_dna.cql  result_bbmri_sample_kind_liquid_other.cql  result_bbmri_sample_kind_tissue_ffpe.cql  result_bbmri_sample_kind_tissue_frozen.cql  result_bbmri_sample_kind_tissue_other.cql  result_body_site_left.cql  result_c61_and_male.cql  result_cce_alive.cql  result_cce_base.cql  result_current.cql  result_diagnosis_c30.cql  result_empty.cql  result_grading_low_grade.cql  result_lens2.cql  result_male_or_female.cql  result_quote.cql  result_sample_kind_ffpe.cql  result_some_gbn.cql  result_tnm_t_2.cql  result_year_of_diagnosis_2000_to_2010.cql  stratifier_groups_bbmri.json  stratifier_groups_dktk.json
src/: ast.rs  ast_alternative.rs  banner.rs  beam.rs  blaze.rs  config.rs  cql.rs  cql_alternative.rs  cql_new.rs  criteria.rs  db.rs  errors.rs  eucaim_api.rs  eucaim_sql.rs  exporter.rs  graceful_shutdown.rs  intermediate_rep.rs  lib.rs  logger.rs  main.rs  mr.rs  omop.rs  start.rs  task_processing.rs  transformed.rs  util.rs
src/blaze/: util.rs
src/projects/: bbmri.rs  common.rs  dktk.rs  mod.rs
src/projects/bbmri/: body.json  mod.rs  template.cql
src/projects/cce/: body.json  mod.rs  template.cql
src/projects/dhki/: mod.rs  template.cql
src/projects/dktk/: body.json  mod.rs  template.cql
src/projects/exporter/: body.json
src/projects/itcc/: body.json  mod.rs  template.cql
src/projects/nngm/: body.json  mod.rs  template.cql
src/projects/pscc/: body.json  mod.rs  template.cql
src/projects/shared/: mod.rs
