[package]
name = "focus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base64 = "0.21.0"
futures = "0.3.26"
http = "0.2.8"
hyper = "0.14.24"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
laplace_rs = {version = "0.1.1", git = "https://github.com/samply/laplace-rs.git", branch = "main" }


# Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# Global variables
static_init = "1.0.2"
once_cell = "1.13.0"

# Command Line Interface
clap = { version = "4.0", features = ["env", "derive"] }
hyper-mock-client = "0.1.3"

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
build-data = "0"


